[gd_scene load_steps=4 format=3 uid="uid://ddcm6wnr6e8xo"]

[ext_resource type="Script" path="res://Scripts/Menus/MainMenu.gd" id="1_5c6j4"]
[ext_resource type="Theme" uid="uid://dits1em4vvtmn" path="res://Resources/Themes/main_theme.tres" id="2_6plgk"]
[ext_resource type="Texture2D" uid="uid://xhni7ffohhos" path="res://Assets/Art/UI/Logo.png" id="3_xmypg"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_5c6j4")

[node name="c" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6plgk")

[node name="Start" type="Button" parent="c"]
layout_mode = 0
offset_left = 207.0
offset_top = 418.0
offset_right = 502.0
offset_bottom = 519.0
text = "START"

[node name="Options" type="Button" parent="c"]
layout_mode = 0
offset_left = 360.0
offset_top = 557.0
offset_right = 655.0
offset_bottom = 658.0
text = "OPTIONS"

[node name="Exit" type="Button" parent="c"]
layout_mode = 0
offset_left = 511.0
offset_top = 703.0
offset_right = 806.0
offset_bottom = 804.0
text = "EXIT"

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(1119, 501)
scale = Vector2(0.231471, 0.231471)
texture = ExtResource("3_xmypg")

[connection signal="pressed" from="c/Start" to="." method="StartPressed"]
[connection signal="pressed" from="c/Options" to="." method="OptionsPressed"]
[connection signal="pressed" from="c/Exit" to="." method="ExitPressed"]
